--- a/Styles.css
+++ b/Styles.css
@@ -6,6 +6,7 @@ body {
   font-family: 'Google Sans', sans-serif;
   margin: 0;
   padding: 0;
+  animation: colorChange 10s infinite alternate; /* Animation */
 }
 
 .container {
@@ -119,4 +120,17 @@ body {
   color: #f0f0f0; /* Lighter text color */
   font-size: 1.2em; /* Bigger text size */
   text-align: center;
+}
+
+/* Animation */
+@keyframes colorChange {
+  0% {
+    background-color: #000;
+  }
+  50% {
+    background-color: #666;
+  }
+  100% {
+    background-color: #000;
+  }
 }
